# ocwm

./: .gitignore  CMakeLists.txt  Makefile  README.md  notes.txt  setup-deps.sh  start-ocwm-debug.sh  start-ocwm.sh
config/: init.lua
include/: command.hpp  config.hpp  key.hpp  ocwm.hpp  singleton.hpp  wmanager.hpp
source/: command.cpp  main.cpp  manager.cpp  wmanager.cpp
src/: main.c  ocwm.h
src/effects/: animation.c  effects.c
src/layout/: layout.c  workspace.c
src/lua/: lua_api.c
src/wayland/: input.c  output.c
src/wm/: view.c
